--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^2.3.3"
 statsmodels = "^0.14.6"
 python-dotenv = "^1.2.1"
 plotly = "^6.5.0"
+nbformat = "^5.10.4"
 
 
 [tool.poetry.group.dev.dependencies]
