--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pandas = "^2.3.3"
-statsmodels = "^0.14.6"
 python-dotenv = "^1.2.1"
 plotly = "^6.5.0"
 nbformat = "^5.10.4"
+pyfixest = "^0.40.1"
+statsmodels = "^0.14.6"
 
 
 [tool.poetry.group.dev.dependencies]
