--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ pandas = "^2.3.3"
 python-dotenv = "^1.2.1"
 plotly = "^6.5.0"
 nbformat = "^5.10.4"
-pyfixest = "^0.40.1"
 statsmodels = "^0.14.6"
+matplotlib = "^3.10.7"
 
 
 [tool.poetry.group.dev.dependencies]
