--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pandas = "^2.3.3"
-python-dotenv = "^1.2.1"
-plotly = "^6.5.0"
 nbformat = "^5.10.4"
 statsmodels = "^0.14.6"
 matplotlib = "^3.10.7"
+fpdf2 = "^2.8.5"
 
 
 [tool.poetry.group.dev.dependencies]
